fix: update text color in CardCart component for improved readability

--- a/src/styles/components/common/CardCart.module.scss
+++ b/src/styles/components/common/CardCart.module.scss
@@ -39,7 +39,7 @@
                 }
                 p{
                     font-size: 1.5rem;
-                    color: $yellow-color;
+                    color: $dark-yellow-color;
                 }
             }
         }
